--- a/toggle.html
+++ b/toggle.html
@@ -11,11 +11,11 @@
 
 <body>
 
-    <div>
-        <p class="text">1</p>
-        <p class="text">2</p>
-        <p class="text">3</p>
-        <p class="text">4</p>
+    <div class="div">
+        <div class="box">
+            <p id="text">toggle</p>
+            <button name="button" id="1" onclick="changeText()">change me</button>
+        </div>
     </div>
 
 
